# secure-alert

./: .gitignore  README.md  Taskfile.yml  manage.py  pyproject.toml
app/: admin.py  filters.py  models.py  pagination.py  serializers.py  views.py
app/migrations/: 0001_initial.py  0002_alter_event_device_id.py  0003_alter_event_device_id.py
app/tests/: test_events.py
secure_alert/: asgi.py  settings.py  urls.py  wsgi.py
