[project]
name = "secure-alert"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "djangorestframework>=3.17.1",
]

[dependency-groups]
dev = [
    "model-bakery>=1.24.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.22",
]
